cppcheck_anonymized/197666_report.txt
njs_iterator.c:1:1: portability: Omitted return type of function 'njs_object_iterate_reverse' defaults to int, this is not supported by ISO C99 and later standards. [returnImplicitInt]
njs_object_iterate_reverse(njs_vm_t *vm, njs_iterator_args_t *args,
^
njs_iterator.c:68:13: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
            args->value = &string_obj;
            ^
njs_iterator.c:1:0: style: The function 'njs_object_iterate_reverse' is never used. [unusedFunction]
njs_object_iterate_reverse(njs_vm_t *vm, njs_iterator_args_t *args,
^
nofile:0:0: information: Active checkers: 113/592 (use --checkers-report=<filename> to see details) [checkersReport]

